infra/istio-resources/dev/vs-argocd.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-argocd
  namespace: istio-system
spec:
  hosts:
    - argocd.internal.dev.shoong.cloud
  gateways:
    - istio-system/shoong-gateway
  http:
    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
