infra/istio-resources/dev/vs-prometheus.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-prometheus
  namespace: istio-system
spec:
  hosts:
    - prometheus.internal.shoong.cloud
  gateways:
    - istio-system/shoong-gateway
  http:
    - route:
        - destination:
            host: infra-monitoring-kube-prom-prometheus.monitoring.svc.cluster.local
            port:
              number: 9090
